@@ -59,6 +59,10 @@ places where the directive is valid. (New in Apache 1.2)
 <DT><CODE>-l</CODE>
 <DD>Give a list of all modules compiled into the server.
 
+<DT><CODE>-S</CODE>
+<DD>Show the settings as parsed from the config file (currently only
+shows a breakdown of the vhost settings).
+
 <DT><CODE>-?</CODE>
 <DD>Print a list of the httpd options, and then exit.
 </DL>
