@@ -53,6 +53,12 @@ of virtual host support in Apache version 1.3 and later.</P>
 <LI><A HREF="../mod/core.html#serverpath">ServerPath</A>
 </UL>
 
+<p>Folks trying to debug their virtual host configuration may find the
+Apache <code>-S</code> command line switch useful.  It will dump out a
+description of how Apache parsed the configuration file.  Careful
+examination of the IP addresses and server names may help uncover
+configuration mistakes.
+
 <!--#include virtual="footer.html" -->
 </BODY>
 </HTML>
