@@ -410,6 +410,63 @@ static ipaddr_chain *find_default_server(unsigned port)
 }
 
 
+static void dump_vhost_config(FILE *f)
+{
+    int i;
+    ipaddr_chain *ic;
+    name_chain *nc;
+    char buf[MAX_STRING_LEN];
+
+    fprintf(f, "VirtualHost configuration:\n");
+    for (i = 0; i < IPHASH_TABLE_SIZE; ++i) {
+	for (ic = iphash_table[i]; ic; ic = ic->next) {
+	    if (ic->sar->host_port == 0) {
+		ap_snprintf(buf, sizeof(buf), "%pA:*", &ic->sar->host_addr);
+	    }
+	    else {
+		ap_snprintf(buf, sizeof(buf), "%pA:%u", &ic->sar->host_addr,
+		    ic->sar->host_port);
+	    }
+	    if (ic->names == NULL) {
+		fprintf(f, "%-22s %s (%s:%u)\n", buf,
+		    ic->server->server_hostname, ic->server->defn_name,
+		    ic->server->defn_line_number);
+		continue;
+	    }
+	    fprintf(f, "%-22s is a NameVirtualHost\n"
+	               "%22s default server %s (%s:%u)\n",
+		       buf, "", ic->server->server_hostname,
+		       ic->server->defn_name, ic->server->defn_line_number);
+	    for (nc = ic->names; nc; nc = nc->next) {
+		if (nc->sar->host_port) {
+		    fprintf(f, "%22s port %u ", "", nc->sar->host_port);
+		}
+		else {
+		    fprintf(f, "%22s port * ", "");
+		}
+		fprintf(f, "namevhost %s (%s:%u)\n",
+			nc->server->server_hostname,
+			nc->server->defn_name,
+			nc->server->defn_line_number);
+	    }
+	}
+    }
+    if (default_list) {
+	fprintf(f, "_default_ servers:\n");
+	for (ic = default_list; ic; ic = ic->next) {
+	    if (ic->sar->host_port == 0) {
+		fprintf(f, "port * ");
+	    }
+	    else {
+		fprintf(f, "port %u ", ic->sar->host_port);
+	    }
+	    fprintf(f, "server %s (%s:%u)\n",
+		ic->server->server_hostname, ic->server->defn_name,
+		ic->server->defn_line_number);
+	}
+    }
+}
+
 /* compile the tables and such we need to do the run-time vhost lookups */
 void ap_fini_vhost_config(pool *p, server_rec *main_s)
 {
@@ -590,6 +647,9 @@ void ap_fini_vhost_config(pool *p, server_rec *main_s)
 #ifdef IPHASH_STATISTICS
     dump_iphash_statistics(main_s);
 #endif
+    if (ap_dump_settings) {
+	dump_vhost_config(stderr);
+    }
 }
 
 
